# adc-converter

./: .gitmodules  CMakeLists.txt  data_control.cpp  data_receiver.cpp  data_receiver.h  design.mdj  main_window.cpp  main_window.h  readme.md  scope_chart.cpp  scope_chart.h  scope_widget.cpp
assets/: design.mdj
libraries/basic-plot/: CMakeLists.txt  basic_plot.cpp  basic_plot.h
new/: .gitignore
new/adc-converter/: CMakeLists.txt  mainwindow.ui
new/adc-converter/mvc/: abstract_controller.cpp  abstract_controller.h  model_attribute.h
new/adc-converter/options/bps/: bps_controller.h  bps_model.h
new/adc-core/: CMakeLists.txt
new/adc-core/source/: abstract-view.h
proof-of-concept/: CMakeLists.txt
proof-of-concept/source/: audio_source.h  main.cpp
source/: abstract_widget.cpp  abstract_widget.h  app_icons.cpp  app_icons.h  app_mediator.cpp  app_mediator.h  audio_source.cpp  data_control.h  element_manager.cpp  element_manager.h  file_loader.cpp  file_loader.h  file_manager.cpp  file_manager.h  file_saver.cpp  file_saver.h  main.cpp  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  scope_data_types.h  scope_widget.h
source/app/: app_core.cpp  app_core.h  app_exporter.cpp  app_exporter.h  app_icons.cpp  app_icons.h  app_io.cpp  app_io.h  app_loader.cpp  app_loader.h  app_mediator.cpp  app_mediator.h  app_saver.cpp  app_saver.h  app_transceiver.cpp  app_transceiver.h  app_types.h  file_loader.cpp  file_saver.cpp
source/app/audio/: audio_source.cpp  audio_source.h
source/app/converters/: abstract_converter.cpp  abstract_converter.h  hexadecimal_converter.cpp  hexadecimal_converter.h
source/app/data/: binary_processor.cpp  binary_processor.h  data_processor.cpp  data_processor.h  data_receiver.cpp  data_receiver.h  text_processor.cpp  text_processor.h
source/app/mvc/: abstract_controller.cpp  abstract_controller.h  abstract_model.cpp  abstract_view.cpp  element_manager.cpp  element_manager.h
source/app/workers/: abstract_file_worker.cpp  abstract_file_worker.h  abstract_worker.cpp  abstract_worker.h  data_worker.cpp  data_worker.h  export_worker.cpp  export_worker.h  load_worker.h  play_worker.cpp  play_worker.h  save_worker.cpp  save_worker.h
source/converters/: abstract_converter.h  dec_converter.cpp  dec_converter.h  decimal_converter.cpp  decimal_converter.h  hex_converter.cpp  hex_converter.h
source/info/general/: gen_controller.h  gen_model.h  gen_view.cpp  gen_view.h  gen_widget.cpp  gen_widget.h
source/mvc/: abstract_controller.cpp  abstract_controller.h  abstract_model.cpp  abstract_model.h  abstract_view.cpp  abstract_view.h  element_manager.h
source/options/bits-per-sample/: bps_controller.cpp  bps_controller.h  bps_model.cpp  bps_view.h  bps_widget.cpp  bps_widget.h
source/options/bps/: bps_controller.cpp  bps_controller.h  bps_model.h  bps_view.cpp  bps_view.h  bps_widget.cpp  bps_widget.h
source/options/communication/: com_controller.cpp  com_controller.h  com_model.cpp  com_view.cpp  com_view.h  com_widget.cpp  com_widget.h
source/options/playback/: pl_model.cpp  pl_model.h  pl_view.cpp  pl_view.h  pl_widget.h
source/options/reference/: ref_view.cpp  ref_view.h  ref_widget.h
source/options/sample-rate/: sr_controller.cpp  sr_controller.h  sr_model.cpp  sr_model.h  sr_view.cpp  sr_view.h  sr_widget.cpp  sr_widget.h
source/options/samples/: smp_controller.h  smp_view.cpp  smp_view.h  smp_widget.h
source/options/serial/: ser_controller.cpp  ser_model.cpp  ser_model.h  ser_view.cpp  ser_view.h  ser_widget.h
source/popovers/: abstract_popover.cpp  abstract_popover.h
source/popovers/about/: about_popover.cpp  about_popover.h  about_view.cpp  about_view.h
source/popovers/processing/: processing_controller.cpp  processing_controller.h  processing_model.cpp  processing_model.h  processing_popover.cpp  processing_popover.h  processing_view.cpp  processing_view.h
source/tools/dec-converter/: dec_controller.cpp  dec_controller.h  dec_model.cpp  dec_model.h  dec_view.h  dec_widget.cpp  dec_widget.h
source/tools/hex-converter/: hex_controller.cpp  hex_controller.h  hex_model.cpp  hex_model.h  hex_view.cpp  hex_view.h  hex_widget.h
source/tools/playback/: pl_model.h  pl_view.cpp  pl_widget.cpp  pl_widget.h
source/views/samples/: samples_controller.cpp  samples_controller.h  samples_model.cpp  samples_model.h  samples_view.cpp  samples_view.h  samples_widget.cpp  samples_widget.h  smp_view.cpp  smp_view.h  smp_widget.cpp  smp_widget.h
source/views/samples/elements/: hex_viewer.cpp  hex_viewer.h
source/views/scope/: scope_controller.cpp  scope_controller.h  scope_view.cpp  scope_view.h  scope_widget.cpp  scope_widget.h
source/views/scope/elements/: custom_chart_view.cpp  custom_chart_view.h
source/widgets/: abstract_widget.cpp  abstract_widget.h
source/widgets/info/general/: gen_controller.cpp  gen_controller.h  gen_model.cpp  gen_model.h  gen_view.h  gen_widget.cpp  gen_widget.h  general_controller.cpp  general_controller.h  general_model.cpp  general_model.h  general_view.cpp  general_view.h  general_widget.cpp  general_widget.h
source/widgets/options/communication/: com_controller.cpp  com_controller.h  com_model.h  com_view.h  com_widget.cpp  com_widget.h  communication_controller.cpp  communication_controller.h  communication_model.cpp  communication_model.h  communication_view.cpp  communication_view.h  communication_widget.cpp  communication_widget.h
source/widgets/options/controls/: controls_controller.cpp  controls_controller.h  controls_model.cpp  controls_model.h  controls_view.cpp  controls_view.h  controls_widget.cpp  controls_widget.h
source/widgets/options/reference/: ref_controller.cpp  ref_controller.h  ref_model.cpp  ref_model.h  ref_view.h  ref_widget.cpp  ref_widget.h  reference_controller.cpp  reference_controller.h  reference_model.cpp  reference_model.h  reference_view.cpp  reference_view.h  reference_widget.cpp  (+1 more)
source/workers/: abstract_worker.cpp  abstract_worker.h  file_worker.cpp  file_worker.h  load_worker.cpp  load_worker.h  save_worker.cpp  save_worker.h
(+81 files in other folders)
